# juntask-django-python

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/app/: settings.py  urls.py  yasg.py
app/cars/: models.py  serializers.py
app/cars/migrations/: 0001_initial.py  0002_car_owner.py  0003_auto_20201219_0001.py
app/users/: models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_remove_user_personal_cars.py  0003_customuser.py  0004_delete_customuser.py
scripts/: entrypoint.sh
